# mdtasks

./: README.md  pyproject.toml
src/mdtasks/: __init__.py  blocking.py  log.py  schema.py  settings.py  task_id.py  template.py
