[project]
name = "mdtasks"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.14.1",
    "pydantic>=2.13.4",
    "python-frontmatter>=1.3.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer",
]

[project.scripts]
t = "mdtasks:app"
mdtasks = "mdtasks:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "build>=1.5.0",
    "twine>=6.2.0",
]
